spec/test/_test_case_archive/sample2/data-abnormal/1/result.txt
do_test tecsgen /home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-abnormal/1 abnormal-1.idl
/home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-abnormal/1 ~
##### tecsgen abnormal-1.idl  #####
abnormal-1.idl:1:18: error: G1016 syntax error near 'int32'
1 error
~
